meta object added as catch all data

--- a/views/websites/websites.pug
+++ b/views/websites/websites.pug
@@ -16,7 +16,7 @@ block content
 						.form#new_website_form
 							label Name
 							input(type="text", placholder="Website Name...")#q_name
-							label URL
+							label Domain (without the http:// or slashes)
 							input(type="text", placholder="Website Domain...")#q_domain
 							.btn#add_new.save Add
 
