--- a/views/websites/websites.pug
+++ b/views/websites/websites.pug
@@ -38,7 +38,13 @@ block content
 						if stats
 							.header
 								h2 #{website.name}
-								a(href="") #{website.domain}
+								a(href="")#theDomain #{website.domain}
+								ul.list.filters
+									li.current All
+									li Awareness
+									li Research
+									li Comparison
+									li Purchase
 							.box.pageviews
 								h4 Page Views
 								table
