--- a/views/partials/nav.pug
+++ b/views/partials/nav.pug
@@ -6,6 +6,8 @@ nav.top_nav
 		li
 			a(href="/websites", class=(current == 'websites' ? 'current' : false)) Websites
 		li
+			a(href="/blocked-devices", class=(current == 'blocked_devices' ? 'current' : false)) Blocked Devices
+		li
 			a(href="/profile", class=(current == 'profile' ? 'current' : false)) Profile
 		li
 			a(href="/logout") Logout
