--- a/views/websites/websites.pug
+++ b/views/websites/websites.pug
@@ -1,81 +1,3 @@
-extends ../layout
+extends websites_layout
 
 block content
-
-	include ../partials/nav
-
-	.darkCont
-		h1 Websites		
-
-		.theContainer
-			.statsCont
-				.theSide
-					.websites
-						h2 Your Websites
-						.btn.btn_openform Add Website
-						.form#new_website_form
-							label Name
-							input(type="text", placholder="Website Name...")#q_name
-							label Domain (without the http:// or slashes)
-							input(type="text", placholder="Website Domain...")#q_domain
-							.btn#add_new.save Add
-
-						ul.websiteList
-							each website in user.websites
-								li(data-domain=`${website.domain}`)
-									.actions
-										a(href=`/websites/${website.domain}`).stats
-										span.edit
-										span.remove
-									label Name
-									input(type="text", value=`${website.name}`, disabled).websiteName_input
-									label URL
-									input(type="text", value=`${website.domain}`, disabled).websiteDomain_input
-									.btn.save Save
-
-				.main_bit
-					.stats
-						if stats
-							.header
-								h2 #{website.name}
-								a(href="")#theDomain #{website.domain}
-								ul.list.filters
-									li.current All
-									li Awareness
-									li Research
-									li Comparison
-									li Purchase
-							.box.pageviews
-								h4 Page Views
-								table
-									tr
-										th.thUrl Page URL
-										th Date
-										th IP
-										th Browser
-										th TimeZone
-									each stat in stats.pageviews
-										tr
-											td.thUrl #{stat.data_point.value}
-											td #{stat.display_date}
-											td #{stat.ip}
-											td #{stat.browser}
-											td #{stat.timezone}
-							.box.uniquedevices
-								h4 Unique Devices
-								table
-									tr
-										th Finger Print
-										th Type
-										th Vendor
-										th Operating System
-									each stat in stats.devices
-										tr
-											td #{stat.fingerprint}
-											td #{stat.type}
-											td #{stat.vendor}
-											td #{stat.os}
-
-	script(src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js")
-	script(src="/static/js/popup.js")
-	script(src="/static/js/websites.js")
