--- a/views/partials/head.pug
+++ b/views/partials/head.pug
@@ -3,3 +3,4 @@ head
 	link(href="https://fonts.googleapis.com/css?family=Bubblegum+Sans|Molengo|Righteous", rel="stylesheet")
 	link(rel="stylesheet", href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css", integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M", crossorigin="anonymous")
 	link(href="/static/css/main.css", rel="stylesheet")
+	link(href="/static/css/responsive.css", rel="stylesheet")
