--- a/views/websites/forms.pug
+++ b/views/websites/forms.pug
@@ -14,8 +14,8 @@ block content
 				ul.list
 					each field in form.fields
 						li
-							p #{field.name}
-							p.id ID: #{field.field_id}
+							p Date Point: #{field.data_point}
+							p.id ID: #{field.input_id}
 				ul.actions
 					li
 						a.more Edit Form
