--- a/views/blocked_devices.pug
+++ b/views/blocked_devices.pug
@@ -26,6 +26,7 @@ block content
 				//- .btn Block This Device
 
 	script(src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js")
-	script(src="https://clientjs.org/js/client.min.js")
+	//- script(src="https://clientjs.org/js/client.min.js")
+	script(src="/static/js/client.js")
 	script(src="/static/js/popup.js")
 	script(src="/static/js/blocked_devices.js")
