--- a/views/audiences/audiences_layout.pug
+++ b/views/audiences/audiences_layout.pug
@@ -12,9 +12,12 @@ body
 				.main_bit
 					block content
 
+	#theMessage
+		p
+
 	script(src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js")
 	script(src="/static/js/popup.js")
-	//- script(src="/static/js/websites.js")
-	//- script(src="/static/js/forms.js")
+	script(src="/static/js/main.js")
+	script(src="/static/js/form.js")
 	script(src="/static/js/bootstrap-datepicker.js")
 	script(src="/static/js/audiences.js")
