--- a/views/audiences/side.pug
+++ b/views/audiences/side.pug
@@ -1,7 +1,14 @@
 .audiences.side_shadow
 	h2 Audiences
 	a(href="/audiences/new").btn.add Create Audience
-
+	ul.list#audiences
+		each audience in audiences
+			li
+				.actions(data-audiencesid=`${audience._id}`)
+					a(href=`/audiences?id=${audience._id}`).emails
+					a(href=`/audiences/edit/${audience._id}`).edit
+					span.remove
+				p #{audience.name}
 	//- .btn.btn_openform Create Audience
 	//- .form#new_website_form
 	//- 	label Audience Name
